# veea-context-capture

./: .gitignore  AGENTS.md  CODE_REVIEW.md  README.md  limitation.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
backend/: main.py  pyproject.toml
ios/CaptureEngine/: SampleHandler.swift
ios/Runner/: AppDelegate.swift  Runner.entitlements
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
phone_app/: build_log.txt
phone_app/android/app/src/main/kotlin/com/example/veea_context_capture/: MainActivity.kt
phone_app/ios/Runner/: Info.plist
phone_app/test/: widget_test.dart
test/: widget_test.dart
